# sentinel

./: .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  SECURITY.md  entrypoint.sh  index.html  mkdocs.yml  pyproject.toml  script.js  sitemap.xml  styles.css
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  example-workflow.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/sentinel/: action.yml
.github/workflows/: ci.yml  docker-build.yml  docs.yml  pypi-publish.yml
adr/: index.html
adr/ADR-001-python/: index.html
adr/ADR-002-vuln-sources/: index.html
adr/ADR-003-ai-strategy/: index.html
adr/ADR-004-output/: index.html
adr/ADR-005-extensibility/: index.html
adr/ADR-006-execution/: index.html
adr/ADR-007-distribution/: index.html
ai-integration/: index.html
architecture/: index.html
ci-cd/: index.html
configuration/: index.html
contributing/: index.html
docker/: README.md
docs/: ai-integration.md  architecture.md  ci-cd.md  configuration.md  contributing.md  faq.md  index.md  installation.md  quickstart.md  roadmap.md  usage.md
docs/adr/: ADR-001-python.md  ADR-002-vuln-sources.md  ADR-003-ai-strategy.md  ADR-004-output.md  ADR-005-extensibility.md  ADR-006-execution.md  ADR-007-distribution.md  README.md
faq/: index.html
installation/: index.html
quickstart/: index.html
roadmap/: index.html
search/: search_index.json
src/tests/: test_sast.py  test_sca.py  vulnerable_example.py
tests/: test_ai.py  test_dast.py  test_sast.py  test_sca.py
usage/: index.html
website/: index.html  script.js  styles.css
(+28 files in other folders)
