[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-security"
version = "1.0.1"
description = "AI-powered security hardening for Python developers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Ronald Gosso", email = "ronaldgosso@gmail.com"}]
keywords = ["security", "vulnerability", "scanner", "sast", "sca", "dast", "ai"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "sqlite-utils>=3.36",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "packaging>=24.0",
    "tomli>=2.0.1; python_version < '3.11'",
    "mistralai>=0.4.0",
    "ollama>=0.1.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]

[project.urls]
Homepage = "https://github.com/ronaldgosso/sentinel"

[project.scripts]
sentinel = "sentinel.cli.main:cli"

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pytest>=8.1.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/sentinel --cov-report=term-missing"